Z-Index hotkey fix

--- a/app/assets/stylesheets/modules/_container.sass
+++ b/app/assets/stylesheets/modules/_container.sass
@@ -28,7 +28,7 @@
 
 ul.tools
   position: relative
-  z-index: 1
+  z-index: 9
 
 // Login
 
